@@ -4,6 +4,7 @@
 	ADDED - RRD datasource can get Cacti query information (in poller_output mode ONLY) - like ifAlias, ifSpeed etc
 	ADDED - RRD datasource can take the ifSpeed from the above, and use it in the map.
 	ADDED - RRD datasource fills in Cacti cacti_path_rra and cacti_url with Cacti base path and URL
+	ADDED - RRD datasource can take global SET rrd_options to add extra options to rrdtool command lines
 	ADDED - SNMP datasource also stores the raw data from the SNMP agent in snmp_raw_in/snmp_raw_out
 	ADDED - SNMP datasource allows '-' as an OID, similar to '-' targets in RRDs.
 	ADDED - Control the drawing order with ZORDER.
